WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
106657
[AC] Memory leak in GLXConfigSelector::createConfig()
https://bugs.webkit.org/show_bug.cgi?id=106657
Summary
[AC] Memory leak in GLXConfigSelector::createConfig()
Sudarsana Nagineni (babu)
Reported
2013-01-11 05:19:23 PST
Noticed the following leak in WebCore::GLXConfigSelector::createConfig(). ==15598== 640 bytes in 1 blocks are definitely lost in loss record 5,498 of 5,864 ==15598== at 0x4C2B6CD: malloc (in /usr/lib/valgrind/vgpreload_memcheck-amd64-linux.so) ==15598== by 0xCA3E915: XGetVisualInfo (VisUtil.c:78) ==15598== by 0xC7BF2CE: glXGetVisualFromFBConfig (in /usr/lib/x86_64-linux-gnu/mesa/libGL.so.1.2) ==15598== by 0x9DA3A0B: WebCore::GLXConfigSelector::createConfig(int const*) (GLXConfigSelector.h:128) ==15598== by 0x9DA3966: WebCore::GLXConfigSelector::surfaceContextConfig() (GLXConfigSelector.h:98) ==15598== by 0x9DA3297: WebCore::GLXTransportSurface::configuration() (GLXSurface.cpp:71) ==15598== by 0x9DA3132: WebCore::GLXTransportSurface::GLXTransportSurface() (GLXSurface.cpp:49) ==15598== by 0x9DE0255: WebCore::GLPlatformSurface::createTransportSurface() (GLPlatformSurface.cpp:59) ==15598== by 0x9DDB5A0: WebCore::GraphicsContext3DPrivate::GraphicsContext3DPrivate(WebCore::GraphicsContext3D*, WebCore::HostWindow*, WebCore::GraphicsContext3D::RenderStyle) (GraphicsContext3DPrivate. ==15598== by 0x9DD9520: WebCore::GraphicsContext3D::GraphicsContext3D(WebCore::GraphicsContext3D::Attributes, WebCore::HostWindow*, WebCore::GraphicsContext3D::RenderStyle) (GraphicsContext3DEfl.cpp:66) ==15598== by 0x9DD92CA: WebCore::GraphicsContext3D::create(WebCore::GraphicsContext3D::Attributes, WebCore::HostWindow*, WebCore::GraphicsContext3D::RenderStyle) (GraphicsContext3DEfl.cpp:40) ==15598== by 0x8F0061C: WebCore::WebGLRenderingContext::create(WebCore::HTMLCanvasElement*, WebCore::WebGLContextAttributes*) (WebGLRenderingContext.cpp:430) ==15598== by 0x8E32B71: WebCore::HTMLCanvasElement::getContext(WTF::String const&, WebCore::CanvasContextAttributes*) (HTMLCanvasElement.cpp:202)
Attachments
Patch
(1.42 KB, patch)
2013-01-11 05:30 PST
,
Sudarsana Nagineni (babu)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Sudarsana Nagineni (babu)
Comment 1
2013-01-11 05:30:57 PST
Created
attachment 182326
[details]
Patch
Laszlo Gombos
Comment 2
2013-01-17 08:21:45 PST
Comment on
attachment 182326
[details]
Patch The change looks good to me. This code would read better if we would have a temporary visualInfo variable instead of manipulating the member variable.
Sudarsana Nagineni (babu)
Comment 3
2013-01-17 09:49:07 PST
(In reply to
comment #2
)
> (From update of
attachment 182326
[details]
) > The change looks good to me. This code would read better if we would have a temporary visualInfo variable instead of manipulating the member variable.
Okay. I will handle this in a separate patch as we discussed on IRC.
WebKit Review Bot
Comment 4
2013-01-17 10:31:13 PST
Comment on
attachment 182326
[details]
Patch Clearing flags on attachment: 182326 Committed
r139988
: <
http://trac.webkit.org/changeset/139988
>
WebKit Review Bot
Comment 5
2013-01-17 10:31:16 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug