[AC] Memory leak in GLXConfigSelector::createConfig() https://bugs.webkit.org/show_bug.cgi?id=106657

Patch by Sudarsana Nagineni <sudarsana.nagineni@intel.com> on 2013-01-17
Reviewed by Laszlo Gombos.

Free the memory returned by glXGetVisualFromFBConfig() using
XFree to avoid a memory leak.

No new tests. No change in behavior.

* platform/graphics/surfaces/glx/GLXConfigSelector.h:
(WebCore::GLXConfigSelector::createConfig):

Canonical link: https://commits.webkit.org/125362@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@139988 268f45cc-cd09-0410-ab3c-d52691b4dbfc